--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Bienvenido a <%= title %></h1>
-    <p>El portal donde podras crear tus propios juegos!!!</p>
-  </body>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body>
+<h1>Bienvenido a <%= title %></h1>
+
+<p>El portal donde podras crear tus propios juegos!!!</p>
+
+<p><a href="/quizes/question">Comience a jugar</a></p>
+</body>
 </html>
