Marco de la aplicación y express-partials

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-</head>
-<body>
 <h1>Bienvenido a <%= title %></h1>
 
-<p>El portal donde podras crear tus propios juegos!!!</p>
+El portal donde podras crear tus propios juegos!!!
 
-<p><a href="/quizes/question">Comience a jugar</a></p>
-</body>
-</html>
