--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,34 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-a {
-  color: #00B7FF;
+body {
+    font: 16px Georgia, serif;
+}
+
+
+#page-wrap > .main {
+    border: 1px solid #000;
+    padding: 1%;
+    margin-bottom: 1px;
+    color: #eeeeee;
+}
+
+section > div {
+    padding: 20px;
+}
+
+header, nav, section {
+    background: #999999;
+    text-align: center;
+}
+
+footer {
+    background: #777777;
+    text-align: center;
+}
+
+nav span {
+    margin: 0px 10px 0px 0px;
 }
