Modificancion para cumplir con ejercicio P2P modulo 6 mas un poco de estilo CCS

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title> Quiz </title>
+    <!--<link rel='stylesheet' href='/stylesheets/style.css'/>-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel='stylesheet'
           type='text/css'
@@ -23,6 +25,7 @@
     <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes/question">Preguntas</a></span>
+        <span><a href="/author">Autores</a></span>
     </nav>
 
     <section class="main" id="s1">
@@ -32,8 +35,11 @@
     </section>
 
     <footer class="main" id="f1">
-        <a href="http://es.wikipedia.org/wiki/Quiz">
+        <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">
             ¿Que es un Quiz?</a>
+        &nbsp;&nbsp;
+        <a href="https://github.com/accnex569/Quiz_PLP" target="_blank">
+            Pagina del proyecto</a>
     </footer>
 </div>
 </body>
