--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,23 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: inherit;
+    padding: 2px;
 }
 
 body {
     font: 16px Georgia, serif;
 }
 
-
 #page-wrap > .main {
-    border: 1px solid #000;
-    padding: 1%;
-    margin-bottom: 1px;
-    color: #eeeeee;
+
+    border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border: 2px dotted #000000;
 }
 
 section > div {
     padding: 20px;
+
 }
 
 header, nav, section {
