--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -4,18 +4,20 @@ body {
 
 nav {
     float: left;
-    width: 15%;
-    height: 200px;
+    width: 18%;
+    height: 350px;
 }
 
 nav span {
-    margin: 0px 100px 0px 0px;
+    margin: 0px 90px 0px 0px;
 }
 
 section {
     float: right;
     width: 80%;
-    height: 200px;
+    height: 350px;
+    overflow: auto;
+    resize: vertical;
 }
 
 footer {
