--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,5 @@
-<form method="get" action="/quizes/answer">
-    Pregunta: <%= pregunta %> <p>
+<form method="get" action="/quizes/<%= quiz.id %>/answer">
+    Pregunta: <%= quiz.pregunta %> <p>
         <input type="text" name="respuesta" placeholder="Responde aquí"/>
         <input type="submit" value="Enviar">
 </form>
