--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,3 +3,8 @@
     <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
     <% } %>
 </table>
+
+<form method = "get" action="/quizes">
+    <p> Busca tu Pregunta: <input type="text" name= "search" placeholder="Buscar"/>
+        <input type="submit" value="Buscar"/>
+</form>
