--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,12 +21,12 @@ section > div {
 }
 
 header, nav, section {
-    background: #999999;
+    background: #cdcdcd;
     text-align: center;
 }
 
 footer {
-    background: #777777;
+    background: #d9d9d9;
     text-align: center;
 }
 
