--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,10 +1,17 @@
 <table>
-    <% var i; for (i=0; i < quizes.length; i++) { %>
-    <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+    <% var i; for (i = 0; i < quizes.length; i++) { %>
+    <tr>
+        <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    </tr>
     <% } %>
 </table>
 
-<form method = "get" action="/quizes">
-    <p> Busca tu Pregunta: <input type="text" name= "search" placeholder="Buscar"/>
+<form method="get" action="/quizes">
+    <p> Busca tu Pregunta: <input type="text" name="search" placeholder="Buscar"/>
         <input type="submit" value="Buscar"/>
 </form>
+<p>
+    <a href="/quizes/new">
+        <button type="button">Crear pregunta</button>
+    </a>
+</p>
