--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -2,7 +2,7 @@ body {
     background: #333;
 }
 
-h2 span, section h3 {
+h2 span, section h3, label.rem {
     display: none;
 }
 
@@ -10,6 +10,10 @@ body {
     font-size: xx-large;
 }
 
-footer, input {
+input, button {
+    font-size: x-large;
+}
+
+footer {
     font-size: large;
 }
