--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,6 +2,7 @@
     <% var i; for (i = 0; i < quizes.length; i++) { %>
     <tr>
         <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+        <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
     </tr>
     <% } %>
 </table>
