--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,6 @@
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
     <%= quiz.pregunta %> <p>
+    <%= quiz.indice %> <p>
         <input type="text" name="respuesta" placeholder="Responde aquí"/>
         <input type="submit" value="Enviar">
 </form>
