sesiones, login y logout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,11 @@
 <body>
 <div id="page-wrap">
     <header class="main" id="h1">
+        <% if(!session.user){ %>
+        <span class="right"><a href="/login">Iniciar Sesión</a></span>
+        <% }else{ %>
+        <span class="right"> <%= session.user.username %> <a href="/logout">Logout</a></span>
+        <% } %>
         <h2>Quiz<span>: Tu juego de las preguntas</span></h2>
     </header>
 
