--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,8 @@ footer {
 }
 
 nav span {
-    margin: 0px 10px 0px 0px;
+    margin: 0 10px 0 0;
 }
 #ErrorMsgs           { color: #f61; font-size: smaller}
+
+.right 				 {float: right;}
