--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,9 +1,13 @@
 <table>
     <% var i; for (i = 0; i < quizes.length; i++) { %>
     <tr>
+
         <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
         <td><%= quizes[i].indice %></td>
-        <td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+        <% if(session.user){ %>
+        <td><a href="quizes/<%= quizes[i].id %>/edit">
+                <button>Editar</button>
+            </a></td>
         <td>
             <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
                 <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
@@ -11,6 +15,7 @@
                 </button>
             </form>
         </td>
+        <% } %>
     </tr>
     <% } %>
 </table>
@@ -20,7 +25,9 @@
         <input type="submit" value="Buscar"/>
 </form>
 <p>
+    <% if(session.user){ %>
     <a href="/quizes/new">
         <button type="button">Crear pregunta</button>
     </a>
+    <% } %>
 </p>
