--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,3 +1,5 @@
+
+
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
     <%= quiz.pregunta %> <p>
     <%= quiz.indice %> <p>
@@ -7,6 +9,12 @@
 <p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
 
 <p><strong>Comentarios:</strong></p>
-<%for(index in quiz.Comments){%>
-<p>- <%=quiz.Comments[index].texto%></p>
+    <%for(index in quiz.Comments){%>
+         <%if(quiz.Comments[index].Validado || session.user){%>
+         <p>- <%=quiz.Comments[index].texto%>
+            <%if(session.user && !quiz.Comments[index].Validado){%>
+         <a href="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish"><button>Publicar</button></a>
+    <%}%>
+</p>
+<%}%>
 <%}%>
