Añadir una página de estadisticas

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,7 @@
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes">Preguntas</a></span>
         <span><a href="/author">Autores</a></span>
+        <span><a href="/quizes/statistics">Estadísticas</a></span>
     </nav>
 
     <section class="main" id="s1">
